# youbot_vs

./: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
include/youbot_vs/: YoubotVisualServoing.h
src/: controlling_youbot_node  youbot_vs_node.cpp  youbot_vs_node.cpp~  youbot_vs_node_bkp.cpp  youbot_vs_nodew.cpp  youbot_vs_nodeww.cpp
src/old/: youbot_vs_node0.cpp  youbot_vs_node1.cpp
src/refact/: libnode.cpp  node.cpp
